--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit
-requests
-duckduckgo-search
-wikipedia-api
-yfinance
-python-dotenv
-google-generativeai
-python-multipart
+streamlit==1.40.2
+google-generativeai==0.3.2
+duckduckgo-search==4.1.1
+python-dotenv==1.0.0
